# nginx-markdown-for-agents

./: .dockerignore  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .semgrep.yml  .snyk  .sonarcloud.properties  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  README_zh-CN.md  SECURITY.md  THIRD-PARTY-NOTICES  build.sh  deny.toml  insert_test.py  requirements-dev.txt
.clusterfuzzlite/: Dockerfile  build.sh
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: cflite_batch.yml  cflite_cron.yml  cflite_pr.yml  ci.yml  codeql.yml  coverity.yml  doctor-smoke.yml  homebrew-formula-gate.yml  homebrew-post-release-verify.yml  homebrew-tap-publish.yml  install-verify.yml  macos-smoke.yml  nightly-fuzz.yml  nightly-perf.yml  official-nginx-docker.yml  real-nginx-ims.yml  release-binaries.yml  release-deb.yml  release-packages.yml  release-rpm.yml  security-static.yml  sign-and-publish.yml  sonarcloud.yml  supply-chain.yml  update-matrix.yml
.greptile/: config.json  files.json  rules.md
charts/nginx-markdown/: Chart.yaml  values.yaml
components/rust-converter/: Cargo.toml  README.md  cbindgen.toml
components/rust-converter/.greptile/: config.json  rules.md
components/rust-converter/examples/: basic_conversion.rs  deterministic_output.rs  perf_baseline.rs  test_code.rs  test_security_debug.rs  timeout_demo.rs  token_estimation.rs  yaml_front_matter_demo.rs
components/rust-converter/fuzz/: Cargo.toml  README.md
components/rust-converter/fuzz/corpus/convert_html/: basic.html
components/rust-converter/fuzz/corpus/ffi_convert/: basic.html
components/rust-converter/fuzz/corpus/fuzz_decompression/: basic.txt
components/rust-converter/fuzz/corpus/fuzz_streaming_chunk_split/: basic.md
components/rust-converter/fuzz/corpus/fuzz_streaming_malformed/: basic.md
components/rust-converter/fuzz/corpus/fuzz_streaming_no_panic/: basic.md
components/rust-converter/fuzz/corpus/negotiation_and_headers/: basic.txt
components/rust-converter/fuzz/corpus/parser_html/: basic.html
components/rust-converter/fuzz/corpus/security_validator/: basic.html
components/rust-converter/fuzz/corpus/streaming_chunks/: basic.md
components/rust-converter/fuzz/fuzz_targets/: convert_html.rs  ffi_convert.rs  fuzz_decompression.rs  fuzz_streaming_chunk_split.rs  fuzz_streaming_malformed.rs  fuzz_streaming_no_panic.rs  fuzz_url_validation.rs  negotiation_and_headers.rs  parser_html.rs  security_validator.rs  streaming_chunk_split.rs  streaming_chunks.rs  streaming_no_panic.rs  streaming_utils.rs
components/rust-converter/include/: markdown_converter.h
components/rust-converter/proptest-regressions/: converter.txt  converter_yaml_tests.txt
components/rust-converter/proptest-regressions/streaming/: sanitizer.txt
components/rust-converter/src/: charset.rs  conditional.rs  converter.rs  decision.rs  decompress.rs  error.rs  etag_generator.rs  ffi.rs  forwarded.rs  header_plan.rs  incremental.rs  lib.rs  llm_adapter.rs  metadata.rs  negotiator.rs  parser.rs  security.rs  token_estimator.rs
components/rust-converter/src/config/: conflict.rs  merge.rs  mod.rs  profile.rs
components/rust-converter/src/converter/: blocks.rs  fast_path.rs  front_matter.rs  inline.rs  large_response.rs  normalize.rs  pruning.rs  tables.rs  traversal.rs
components/rust-converter/src/decision/: conditional.rs  eligibility.rs  mod.rs  reason_code.rs  streaming.rs
components/rust-converter/src/diagnostics/: mod.rs  schema.rs
components/rust-converter/src/error/: classification.rs  mod.rs
components/rust-converter/src/ffi/: abi.rs  convert.rs  diagnostics.rs  exports.rs  incremental.rs  memory.rs  options.rs  streaming.rs
components/rust-converter/src/metadata/: extract.rs  resolve.rs  tests.rs
components/rust-converter/src/metrics/: labels.rs  mod.rs
components/rust-converter/src/streaming/: budget.rs  charset.rs  converter.rs  emitter.rs  mod.rs  sanitizer.rs  state_machine.rs  tokenizer.rs  types.rs
components/rust-converter/tests/: charset_budget_test.rs  converter_regressions.rs  converter_tables.rs  coverage_edge_cases.rs  coverage_error_paths.rs  coverage_streaming_edge_cases.rs  coverage_streaming_paths.rs  decompression_budget_test.rs  deflate_streaming_equivalence.rs  etag_integration_test.rs  feature_independence_test.proptest-regressions  feature_independence_test.rs  ffi_ownership_lifecycle.rs  ffi_test.proptest-regressions  ffi_test.rs  incremental_equivalence.rs  known_differences.rs  large_document_perf.rs  optimization_properties.proptest-regressions  optimization_properties.rs  optimization_regression.rs  parser_heavy_input_test.rs  perf_report_completeness.rs  reason_registry_sync_test.rs  security_tests.rs  streaming_bounded_memory.rs  streaming_chunk_boundary.rs  streaming_compare_support.rs  streaming_failure_paths.rs  streaming_high_risk_structures.rs  streaming_malformed_html_security.rs  streaming_parity.rs  streaming_properties.rs  streaming_specific_regression.rs  streaming_test_support.rs  streaming_three_way.rs  timeout_test.rs  tokenizer_stats_test.rs  yaml_front_matter_test.rs
components/rust-converter/tests/support/: streaming_compare_support.rs
docs/: COMPATIBILITY.md  DOCUMENTATION_DUPLICATION_POLICY.md  FAQ.md  README.md  glossary.md
fuzz/: README.md
packaging/: README.md  checksums.sha256  matrix.yaml  nginx-checksums.yaml
perf/: metrics-schema.json  quality-thresholds.json  streaming-evidence-targets.json  thresholds.json
tools/: build_release.sh  install.sh  release-matrix.json  release-matrix.schema.json  render_release_matrix_docs.py  run-checks.sh  test_install_workflow.sh
tools/e2e-harness/: Cargo.toml
tools/e2e-harness/src/: artifacts.rs  assertions.rs  bootstrap.rs  cli.rs  http.rs  main.rs  process.rs  runtime.rs
tools/e2e-harness/src/fixtures/: handlers.rs  http_backend.rs  mod.rs
tools/e2e-harness/src/scenarios/: accept_negotiation.rs  auth_cache.rs  brotli_streaming.rs  common.rs  conditional_requests.rs  metrics_endpoint.rs  mod.rs  smoke.rs  status_codes.rs
(+919 files in other folders)
