[package]
name = "nginx-markdown-converter"
version = "0.9.0"
edition = "2024"
rust-version = "1.91"
authors = ["NGINX Markdown for Agents Contributors"]
description = "Rust-based HTML to Markdown conversion engine for NGINX"
license = "BSD-2-Clause"
repository = "https://github.com/cnkang/nginx-markdown-for-agents"

[lib]
# Build as both staticlib (for NGINX linking), cdylib (for testing), and rlib (for examples/tests)
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
# HTML5 parser - handles malformed markup gracefully
html5ever = "0.38"
# DOM tree representation
markup5ever_rcdom = "0.38"
# Fast hashing for ETags (using version compatible with older Rust)
blake3 = "1.8"
# Hex encoding for ETag generation
hex = "0.4"
# Regular expressions for charset detection
regex = "1.10"
# Character encoding transcoding for non-UTF-8 HTML inputs
encoding_rs = "0.8"
# Gzip/deflate decompression for bounded decompression FFI
flate2 = "1.0"
# Brotli decompression for bounded decompression FFI
brotli = "8.0"
# Serialization framework for diagnostics schema
serde = { version = "1.0", features = ["derive"] }
# JSON serialization for diagnostics endpoint output
serde_json = "1.0"

[dev-dependencies]
# Property-based testing framework
proptest = "1.11"
# Platform-specific APIs (getrusage for peak RSS measurement)
libc = "0.2"
# Parse known-difference registry for streaming parity harness
toml = "1.1"

[features]
default = ["prune_noise_regions", "streaming", "incremental"]
incremental = []
streaming = []
prune_noise_regions = []

[profile.release]
# Optimize for performance
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
# Faster compilation during development
opt-level = 0
