[package]
name = "e2e-harness"
version = "0.1.0"
edition = "2024"
rust-version = "1.97"
authors = ["NGINX Markdown for Agents Contributors"]
description = "Rust-first E2E test harness for nginx-markdown-for-agents"
license = "BSD-2-Clause"

[[bin]]
name = "e2e-harness"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4.5", features = ["derive", "env"] }
# Async runtime for fixture backends and HTTP helpers
tokio = { version = "1.44", features = ["full"] }
# HTTP client for scenario assertions
reqwest = { version = "0.13.4", default-features = false, features = ["blocking"] }
# Embedded HTTP server for fixture backends
axum = "0.8"
# JSON serialization for reports and invocation metadata
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Structured error handling
anyhow = "1.0"
# Regex for body assertion helpers
regex = "1.10"
# HTTP date parsing for conditional fixture behavior.
httpdate = "1.0"
# Deterministic Brotli-compressed upstream fixtures.
brotli = "8.0.4"
# Stream fixture bodies in controlled wire-sized chunks.
futures-util = "0.3"
# Constrain the slow-reader socket receive buffer for backpressure evidence.
socket2 = "0.6"

[dev-dependencies]
# Property-based testing
proptest = "1.11"
# Temporary directory helpers for integration tests
tempfile = "3.20"
