[package]
name = "nginx-markdown-converter-fuzz"
version = "0.0.0"
publish = false
edition = "2024"
rust-version = "1.97"
license = "BSD-2-Clause"

[package.metadata]
cargo-fuzz = true

[dependencies]
flate2 = "1.0"
libfuzzer-sys = "0.4"
markup5ever_rcdom = "0.38"
nginx-markdown-converter = { version = "0.9.1", path = "..", features = ["streaming"] }

[[bin]]
name = "parser_html"
path = "fuzz_targets/parser_html.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ffi_convert"
path = "fuzz_targets/ffi_convert.rs"
test = false
doc = false
bench = false

[[bin]]
name = "security_validator"
path = "fuzz_targets/security_validator.rs"
test = false
doc = false
bench = false

[workspace]
members = ["."]

[[bin]]
name = "fuzz_streaming_no_panic"
path = "fuzz_targets/fuzz_streaming_no_panic.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_streaming_chunk_split"
path = "fuzz_targets/fuzz_streaming_chunk_split.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_streaming_malformed"
path = "fuzz_targets/fuzz_streaming_malformed.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_decompression"
path = "fuzz_targets/fuzz_decompression.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_url_validation"
path = "fuzz_targets/fuzz_url_validation.rs"
test = false
doc = false
bench = false

[[bin]]
name = "convert_html"
path = "fuzz_targets/convert_html.rs"
test = false
doc = false
bench = false

[[bin]]
name = "streaming_chunks"
path = "fuzz_targets/streaming_chunks.rs"
test = false
doc = false
bench = false

[[bin]]
name = "negotiation_and_headers"
path = "fuzz_targets/negotiation_and_headers.rs"
test = false
doc = false
bench = false
